--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
             <header class="item1">
                 <div class="container"> 
                     <div id="topHeaderRow">
-                        <p>Welcome to <a href="#">Art Store</a>, <a href="#">Login</a> or <a href="#"> Create new account</a>
+                        <p>Welcome to <a href="#">Art Store</a>, <a href="#">Login</a> or <a href="account.html"> Create new account</a>
                         <nav>
                             <ul>
-                                <li><i class="fas fa-user"></i><a href="account.html"> My Account</a></li>
+                                <li><i class="fas fa-user"></i><a href="#"> My Account</a></li>
                                 <li><a href="#cartInfo" class="responsive-active-only"><i class="fas fa-shopping-cart"></i></a><a href="#"> Shopping Cart</a></li>
                                 <li><i class="fas fa-gift"></i><a href="#"> Wish List</a></li>
                                 <li><i class="fas fa-arrow-right"></i><a href="#"> Checkout</a></li>
